--- a/index.html
+++ b/index.html
@@ -59,11 +59,38 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+						<article id="work">
+							<h2 class="major">Projects</h2>
+							
+							<!-- Project 1 -->
+							<div class="project">
+								<span class="image main"><img src="images/Proj 1.JPG" alt="" /></span>
+								<h3>Project Title 1</h3>
+								<p>Short description of Project 1.</p>
+								<a href="project1.html">View Project</a>
+							</div>
+
+							<hr>
+
+							<!-- Project 2 -->
+							<div class="project">
+								<span class="image main"><img src="images/Proj 2.JPG" alt="" /></span>
+								<h3>Project Title 2</h3>
+								<p>Short description of Project 2.</p>
+								<a href="project2.html">View Project</a>
+							</div>
+
+							<hr>
+
+							<!-- Project 3 -->
+							<div class="project">
+								<span class="image main"><img src="images/Proj 3.JPG" alt="" /></span>
+								<h3>Project Title 3</h3>
+								<p>Short description of Project 3.</p>
+								<a href="project3.html">View Project</a>
+							</div>
+
+							<!-- Add more project sections as needed -->
 							</article>
 
 						<!-- About -->
