--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 							<!-- Project 3 -->
 							<div class="project">
-								<span class="image main"><img src="images/Proj 3.JPG" alt="" /></span>
+								<span class="image main"><img src="images/Intro.jpg" alt="" /></span>
 								<h3>Project Title 3</h3>
 								<p>Short description of Project 3.</p>
 								<a href="project3.html">View Project</a>
@@ -96,7 +96,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/profile2.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
