--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 							<!-- Project 3 -->
 							<div class="project">
-								<span class="image main"><img src="images/Intro.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Proj 3.jpg" alt="" /></span>
 								<h3>Project Title 3</h3>
 								<p>Short description of Project 3.</p>
 								<a href="project3.html">View Project</a>
