--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Jake Franzen</h1>
-								<p>A reflective repository of my work and projects. Updated last 10.26.2023. </p>
+								<p>A reflective repository of my work and projects. Updated last 10.27.2023. </p>
 							</div>
 						</div>
 						<nav>
@@ -97,7 +97,32 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/profile2.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>I currently call the Mission District of San Francisco home,
+									 but my roots trace back to a charming little town in Kentucky 
+									 called Alexandria, just an hour's drive south of Cincinnati.</p>
+								<p>Growing up, I had the privilege of having two educators as 
+									parents, which I humorously claim was like a subtle hint from
+									 the universe to become a teacher someday. To be honest, I 
+									 believe that as we age, we all carry a shared responsibility 
+									 to impart knowledge in some way, but that's a tangent for 
+									 another day.</p>
+								<p>Post high school, I embarked on an adventure at the University 
+									of Cincinnati (Go Bearcats!). It was there that my outlook on
+									 the world underwent a colossal shift, helping me define who 
+									 I wanted to be. My studies in Finance and Economics laid a 
+									 solid foundation for my journey in the business world.</p>
+								<p>I spent three transformative years in the whirlwind world 
+									of management consulting at Accenture – full of highs and 
+									lows. But now, I'm all about building.</p>
+								<p>My interests are as diverse as a mixed bag of candies – 
+									from networking to animation, game development, and 
+									everything in between, including clothing and style.</p>
+								<p>The purpose of this website is to be my accountability 
+									partner, tracking my progress as I evolve into a builder 
+									and creator in the domains that truly fuel my passion.</p>
+								<p>If you've read this far, I genuinely appreciate your 
+									attention. Thanks for spending a few moments here with me. 
+									You're awesome for being here.</p>
 							</article>
 
 						<!-- Contact -->
@@ -127,7 +152,7 @@
 									<li><a href="https://twitter.com/jakefranzen32" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/franzenjacob/" class="icon brands fa-linkedin"><span class="label">Facebook</span></a></li>
 									<li><a href="https://youtube.com/@jacobfranzen5370?si=eKPbWAs43f9rsKqQ" class="icon brands fa-youtube"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands fa-gm"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
