--- a/index.html
+++ b/index.html
@@ -65,9 +65,20 @@
 							<!-- Project 1 -->
 							<div class="project">
 								<span class="image main"><img src="images/Proj 1.JPG" alt="" /></span>
-								<h3>Project Title 1</h3>
-								<p>Short description of Project 1.</p>
-								<a href="project1.html">View Project</a>
+								<h3>Python Pong Game</h3>
+								<p>Since parting ways with my former employee - I made the choice to explore interests and test
+									new avenues for AI application. This involves getting familiar with the tools that currently
+									exist today (though I'm sure it will change in a weeks time 2.13). 
+
+									I wanted to start easy with leveraging an AI tool to build me a classic pong game leveraging Pygame.
+									Pulling the sample format from the pygame website (<a href="https://www.pygame.org/docs/">link here</a>) 
+									- I prompted the AI tool to draft the game using the natural language chat feature and it gave me an 
+									incredible start.
+
+									I further modified the visuals, scoreboard, reset button, and win/loss screen. This was an incredible
+									success using the tool with limited coding knowledge that I'm looking to continue building off of.
+								</p>
+								<a href="https://github.com/jakefranzen/PongGame.git">View Project</a>
 							</div>
 
 							<hr>
