delete proj images

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<!-- Project 1 -->
 							<div class="project">
 								<span class="image main"><img src="images/Proj 1.JPG" alt="" /></span>
-								<h3>Python Pong Game</h3>
+								<h3>Futuristic Pong Game</h3>
 								<p>Since parting ways with my former employee - I made the choice to explore interests and test
 									new avenues for AI application. This involves getting familiar with the tools that currently
 									exist today (though I'm sure it will change in a weeks time 2.13). 
